chore: save current GlobeTrotter version